--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 	<a href="https://emzak208.github.io/web-developer/gallery/index.html">Gallery sites</a>
+	<p>Other sites are work in progress</p>
 </body>
 </html> 
