--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<a href="https://emzak208.github.io/web-developer/gallery/index.html">Gallery sites</a>
-	<a href="https://emzak208.github.io/web-developer/cat_app/index.html">Gallery sites</a>
+	<a href="https://emzak208.github.io/web-developer/cat_app/index.html">Cat App</a>
 	<p>Other sites are work in progress</p>
 </body>
 </html> 
