--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 	<title>My websites!</title>
 </head>
 <body>
+<div>
 	<a href="https://emzak208.github.io/web-developer/gallery/index.html">Gallery sites</a>
+</div>
+<div>
 	<a href="https://emzak208.github.io/web-developer/cat_app/index.html">Cat App</a>
+</div>
 	<p>Other sites are work in progress</p>
 </body>
 </html> 
